--- a/Projects/boston_housing/boston_housing_PT.ipynb
+++ b/Projects/boston_housing/boston_housing_PT.ipynb
@@ -364,7 +364,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Resposta: **"
+    "**Resposta: ** Olhando para o gráfico com max_depth = 3, vemos que após adicionarmos 150 pontos de treinamento o modelo de treinamento começa a convergir em 0.8. Assim como o modelo de teste começa a convergir em 0.8. Desta forma, ter mais pontos de treinamento não seria beneficiaria o modelo. "
    ]
   },
   {
@@ -412,7 +412,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Resposta: **"
+    "**Resposta: ** Quando o modelo é treinado com a profundidade maxima 1, sofre de viés alto. Quando o modelo é treinado com a profundidade 10 sofre de variância alta.\n",
+    "- Em max_depth = 1: os modelos de treinamento e teste convergiram com um score de 0.5, o que indica que são incapazes de representar a complexidade das relações subjacentes.\n",
+    "- Em max_depth = 10: existe uma diferença muito grande no score entre o modelo de treinamento e o de teste, e neste caso indica que o modelo de testes é altamente sensível aos dados, ou seja, sofre de variância. "
    ]
   },
   {
@@ -427,7 +429,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Resposta: **"
+    "**Resposta: ** Acredito que seja o gráfico com max_depth = 3. Pois, as curvas convergem para valores semelhantes indicando que o modelo tem uma boa capacidade de generalizar."
    ]
   },
   {
@@ -452,7 +454,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Resposta: **"
+    "**Resposta: ** GridSearch é uma forma de analizar sistematicamente multiplas combinações de parametros, realizando validações cruzadas ao longo do processo, para determinar qual calibragem (parametrização) dá o melhor desempenho. "
    ]
   },
   {
@@ -468,7 +470,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Resposta: **"
+    "**Resposta: ** K-fold é uma tecnica utilizada para dividir a amostra em várias (k) partes (fold). O benefício de utilizá-la é que você maximiza os resultados de aprendizado, ao reduzir os itens do conjunto de dados de teste, de maneira a obter a melhor avaliação. "
    ]
   },
   {
